--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/sprout1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bruna Da Silva</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
